# Curator

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  api-design.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  (+2 more)
ray-curator/: Dockerfile  pyproject.toml
ray-curator/docker/: Dockerfile
ray-curator/ray_curator/: __init__.py
ray-curator/ray_curator/backends/: base.py  utils.py
ray-curator/ray_curator/backends/experimental/: utils.py
ray-curator/ray_curator/backends/experimental/ray_actor_pool/: __init__.py  adapter.py  executor.py  raft_adapter.py  shuffle_adapter.py  utils.py
ray-curator/ray_curator/backends/experimental/ray_data/: adapter.py  executor.py  utils.py
ray-curator/ray_curator/backends/internal/raft/: ray_comms.py
ray-curator/ray_curator/backends/xenna/: adapter.py  executor.py
ray-curator/ray_curator/core/: client.py  utils.py
ray-curator/ray_curator/examples/: quickstart.py
ray-curator/ray_curator/examples/image/: helper.py  image_curation_example.py  image_dedup_example.py
ray-curator/ray_curator/examples/video/: video_read_example.py  video_split_clip_example.py
ray-curator/ray_curator/metrics/: __init__.py  constants.py  utils.py
ray-curator/ray_curator/models/: __init__.py  aesthetics.py  base.py  clip.py  cosmos_embed1.py  internvideo2_mm.py  nsfw.py  prompt_formatter.py  qwen_lm.py  qwen_vl.py  transnetv2.py
ray-curator/ray_curator/pipeline/: pipeline.py
ray-curator/ray_curator/stages/: base.py  client_partitioning.py  file_partitioning.py  function_decorators.py  resources.py
ray-curator/ray_curator/stages/deduplication/: gpu_utils.py  id_generator.py  io_utils.py
ray-curator/ray_curator/stages/deduplication/fuzzy/: __init__.py  buckets_to_edges.py  connected_components.py  identify_duplicates.py  minhash.py  utils.py  workflow.py
ray-curator/ray_curator/stages/deduplication/semantic/: base.py  identify_duplicates.py  kmeans.py  pairwise.py  pairwise_io.py  ranking.py
ray-curator/ray_curator/stages/image/deduplication/: __init__.py  removal.py
ray-curator/ray_curator/stages/image/embedders/: __init__.py  clip_embedder.py
ray-curator/ray_curator/stages/image/filters/: __init__.py  aesthetic_filter.py  base.py  nsfw_filter.py
ray-curator/ray_curator/stages/image/io/: __init__.py  convert.py  image_reader.py  image_writer.py
ray-curator/ray_curator/stages/shuffler/: rapidsmpf_shuffler.py  stage.py
ray-curator/ray_curator/stages/text/classifiers/: README.md  aegis.py  base.py  constants.py  content_type.py  domain.py  fineweb_edu.py  prompt_task_complexity.py  quality.py
ray-curator/ray_curator/stages/text/deduplication/: removal.py
ray-curator/ray_curator/stages/text/download/: README.md  utils.py
ray-curator/ray_curator/stages/text/embedders/: __init__.py  base.py
ray-curator/ray_curator/stages/text/filters/: code.py  fasttext_filter.py  heuristic_filter.py
ray-curator/ray_curator/stages/text/models/: model.py  tokenizer.py
ray-curator/ray_curator/stages/text/modifiers/: __init__.py  c4.py  doc_modifier.py  fasttext.py  line_remover.py  markdown_remover.py  newline_normalizer.py  quotation_remover.py  slicer.py  unicode_reformatter.py  url_remover.py
ray-curator/ray_curator/stages/text/modules/: __init__.py  add_id.py  modifier.py  score_filter.py
ray-curator/ray_curator/stages/video/caption/: caption_enhancement.py  caption_generation.py  caption_preparation.py
ray-curator/ray_curator/stages/video/clipping/: clip_extraction_stages.py  clip_frame_extraction.py  transnetv2_extraction.py  video_frame_extraction.py
ray-curator/ray_curator/stages/video/embedding/: cosmos_embed1.py  internvideo2.py
ray-curator/ray_curator/stages/video/filtering/: clip_aesthetic_filter.py  motion_filter.py  motion_vector_backend.py
ray-curator/ray_curator/stages/video/io/: clip_writer.py  video_reader.py
ray-curator/ray_curator/stages/video/preview/: preview.py
ray-curator/ray_curator/tasks/: file_group.py  tasks.py  utils.py  video.py
ray-curator/ray_curator/tutorials/text/: datasets_download_extract_tutorial.ipynb
ray-curator/ray_curator/utils/: client_utils.py  column_utils.py  decoder_utils.py  file_utils.py  grouping.py  hf_download_utils.py  nvcodec_utils.py  operation_utils.py  performance_utils.py  storage_utils.py  windowing_utils.py  writer_utils.py
ray-curator/tests/: L0_Unit_Test_GPU.sh  conftest.py
ray-curator/tests/backends/: test_integration.py  utils.py
ray-curator/tests/backends/experimental/: __init__.py  test_utils.py
ray-curator/tests/backends/experimental/ray_data/: test_utils.py
ray-curator/tests/core/: test_get_ray_client.py
ray-curator/tests/models/: __init__.py  test_aesthetics.py  test_clip.py  test_cosmos_embed1.py  test_internvideo2.py  test_internvideo2_mm.py  test_prompt_formatter.py  test_qwen_lm.py  test_qwen_vl.py  test_transnetv2.py
ray-curator/tests/pipelines/: test_pipelines.py
ray-curator/tests/stages/: test_base.py  test_client_partitioning.py  test_file_partitioning.py  test_function_decorators.py
ray-curator/tests/stages/deduplication/: test_id_generator.py
ray-curator/tests/stages/deduplication/fuzzy/: test_buckets_to_edges_stage.py  test_connected_components_stage.py  test_fuzzy_workflow.py  test_lsh_stage.py  test_minhash.py  test_minhash_stage.py
ray-curator/tests/stages/deduplication/semantic/: __init__.py  test_base.py  test_identify_duplicates.py  test_kmeans.py  test_pairwise.py  test_pairwise_io.py  test_ranking.py  test_utils.py
ray-curator/tests/stages/image/: __init__.py
ray-curator/tests/stages/image/dedup/: __init__.py  test_dedup_filter.py
ray-curator/tests/stages/shuffler/: test_shuffle_stage.py
ray-curator/tests/stages/video/: __init__.py
ray-curator/tests/tasks/: test_tasks.py  test_video.py
ray-curator/tests/utils/: __init__.py  test_client_utils.py  test_column_utils.py  test_decoder_utils.py  test_file_utils.py  test_grouping.py  test_nvcodec_utils.py  test_operation_utils.py  test_writer_utils.py
(+744 files in other folders)
